@@ -1,6 +1,7 @@
 package com.audit.infrastructure.adapters.input.messageBroker;
 
-import lombok.RequiredArgsConstructor;
+import java.util.Optional;
+
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
 import org.springframework.amqp.support.AmqpHeaders;
 import org.springframework.stereotype.Component;
@@ -16,29 +17,27 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.rabbitmq.client.Channel;
 
-import jakarta.annotation.PostConstruct;
-
 import org.springframework.messaging.handler.annotation.Header;
 
 @Component
-@RequiredArgsConstructor
 public class AuditSessionListener extends AbstractMessageListener<SessionEventDto> {
 
     private final LogAuditSessionCommand logAuditSessionPort;
     private final SessionEventMapper sessionEventMapper;
-    private final IMessageErrorHandlingPort messageErrorHandlingPortImpl;
 
-    @PostConstruct
-    private void init() {
-        this.messageErrorHandlingPort = messageErrorHandlingPortImpl;
+    public AuditSessionListener(LogAuditSessionCommand logAuditSessionPort,
+            SessionEventMapper sessionEventMapper,
+            IMessageErrorHandlingPort messageErrorHandlingPort) {
+        super(messageErrorHandlingPort);
+        this.logAuditSessionPort = logAuditSessionPort;
+        this.sessionEventMapper = sessionEventMapper;
     }
 
     @RabbitListener(queues = RabbitSessionConfig.SESSION_AUDIT_QUEUE)
     public void handleSessionEvent(
-        SessionEventDto eventDto,
-        Channel channel,
-        @Header(AmqpHeaders.DELIVERY_TAG) long deliveryTag
-    ) {
+            SessionEventDto eventDto,
+            Channel channel,
+            @Header(AmqpHeaders.DELIVERY_TAG) long deliveryTag) {
         handleMessage(eventDto, channel, deliveryTag);
     }
 
@@ -48,29 +47,32 @@ public class AuditSessionListener extends AbstractMessageListener<SessionEventDt
         logAuditSessionPort.execute(request);
     }
 
-
     @Override
-    protected boolean isValidEvent(SessionEventDto event) {
-        return event != null
-            && event.getSessionId() != null && !event.getSessionId().trim().isEmpty()
-            && event.getUserId() != null && !event.getUserId().trim().isEmpty()
-            && event.getUserName() != null && !event.getUserName().trim().isEmpty()
-            && event.getAction() != null 
-            && event.getActionAt() != null;
+    protected Optional<String> validateEvent(SessionEventDto event) {
+        if (event == null)
+            return Optional.of("event is null");
+        if (event.getSessionId() == null || event.getSessionId().isBlank())
+            return Optional.of("sessionId missing");
+        if (event.getUserId() == null || event.getUserId().isBlank())
+            return Optional.of("userId missing");
+        if (event.getUserName() == null || event.getUserName().isBlank())
+            return Optional.of("userName missing");
+        if (event.getAction() == null)
+            return Optional.of("action missing");
+        if (event.getActionAt() == null)
+            return Optional.of("actionAt missing");
+        return Optional.empty();
     }
-
 
     @Override
     protected String getEntityType() {
         return "Session";
     }
 
-
     @Override
     protected String extractEventType(SessionEventDto event) {
         return event != null && event.getAction() != null ? event.getAction() : null;
     }
-
 
     @Override
     protected String convertEventToJson(SessionEventDto event) {
